--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-resume-builder",
+  "name": "CV Builder",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -11,7 +11,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "7.12.2",
-    "react-images-upload": "1.2.8",
     "react-redux": "7.2.4",
     "react-router": "^5.2.0",
     "react-scripts": "^5.0.1",
