--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-scripts": "^5.0.1",
     "react-to-print": "^2.13.0",
     "redux": "4.1.1",
-    "redux-thunk": "2.3.0",
-    "typescript": "4.3.5"
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
