--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
+    "@mui/material": "^5.10.13",
+    "@mui/styled-engine-sc": "^5.10.6",
     "classnames": "2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -16,7 +20,8 @@
     "react-scripts": "^5.0.1",
     "react-to-print": "^2.13.0",
     "redux": "4.1.1",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
